--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     </div>
 </div>
 <div class="shows">
+    <div class="video_box">
+        <video class="video_bg" muted autoplay loop src="./img/br.mp4"></video>
+    </div>
     <div class="box">
         <h1>Shows</h1>
     </div>
@@ -49,8 +52,8 @@
         <p>This is some text inside of a div block.</p>
     </div>
     
-        <div class="main-color"></div>
-</div>
+
+</div>  
 
 <div class="events">
     <div class="events_text">
