--- a/index.html
+++ b/index.html
@@ -41,45 +41,44 @@
         </div>
     </div>
 </div>
+<div class="video_box">
+    <video class="video_bg" muted autoplay loop src="./img/br.mp4"></video>
+</div>
 <div class="shows">
-    <div class="video_box">
-        <video class="video_bg" muted autoplay loop src="./img/br.mp4"></video>
-    </div>
     <div class="box">
         <h1>Shows</h1>
     </div>
     <div class="content">
         <p>This is some text inside of a div block.</p>
     </div>
-    
-
 </div>  
+
 
 <div class="events">
     <div class="events_text">
         <h1>Events</h1>
         <div class="content">
-            <p>>This is some text inside of a div block.</p>
+            <p>This year was an opening year for us, we held a total of 14 events, and we continue to hold.</p>
+            <div class="nav">
+                <div class="tab_selection">
+                    <div id="id1" class="item"><p class="cupture">5 Jul 2025</p></div>
+                    <div id="id2" class="item"><p class="cupture">12 Nov 2026</p></div>
+                    <div id="id3" class="item"><p class="cupture">9 Mar 2027</p></div>
+                    <div id="id4" class="item"><p class="cupture">18 Sep 2025</p></div>
+                    <div id="id5" class="item"><p class="cupture">25 Dec 2026</p></div>
+                    <div id="id6" class="item"><p class="cupture">8 Apr 2027</p></div>
+                    <div id="id7" class="item"><p class="cupture">15 Aug 2025</p></div>
+                    <div id="id8" class="item"><p class="cupture">21 Oct 2026</p></div>
+                    <div id="id9" class="item"><p class="cupture">3 Feb 2027</p></div>
+                    <div id="id10" class="item"><p class="cupture">10 Jun 2025</p></div>
+                    <div id="id11" class="item"><p class="cupture">27 Sep 2026</p></div>
+                    <div id="id12" class="item"><p class="cupture">14 Jan 2027</p></div>
+                    <div id="id13" class="item"><p class="cupture">19 Jul 2025</p></div>
+                    <div id="id14" class="item"><p class="cupture">5 Nov 2026</p></div>
+                </div>      
+            </div>  
         </div>
-        <div class="nav">
-            <div class="tab_selection">
-                <div id="id1" class="item"><p class="cupture">5 Jul 2025</p></div>
-                <div id="id2" class="item"><p class="cupture">12 Nov 2026</p></div>
-                <div id="id3" class="item"><p class="cupture">9 Mar 2027</p></div>
-                <div id="id4" class="item"><p class="cupture">18 Sep 2025</p></div>
-                <div id="id5" class="item"><p class="cupture">25 Dec 2026</p></div>
-                <div id="id6" class="item"><p class="cupture">8 Apr 2027</p></div>
-                <div id="id7" class="item"><p class="cupture">15 Aug 2025</p></div>
-                <div id="id8" class="item"><p class="cupture">21 Oct 2026</p></div>
-                <div id="id9" class="item"><p class="cupture">3 Feb 2027</p></div>
-                <div id="id10" class="item"><p class="cupture">10 Jun 2025</p></div>
-                <div id="id11" class="item"><p class="cupture">27 Sep 2026</p></div>
-                <div id="id12" class="item"><p class="cupture">14 Jan 2027</p></div>
-                <div id="id13" class="item"><p class="cupture">19 Jul 2025</p></div>
-                <div id="id14" class="item"><p class="cupture">5 Nov 2026</p></div>
-
-            </div>      
-        </div>  
+        
     </div>
     <div class="events_content">
         <div id="event_countenir_01">
@@ -128,10 +127,32 @@
     </div>
 
 </div>
+
+<div class="places_images">
+    <div class="places_images_enter">
+        <img id="places_01" class="places_item" src="./img/01__space.jpg" alt="">
+        <img id="places_02" class="places_item" src="./img/02__space.jpg" alt="">
+        <img id="places_03" class="places_item" src="./img/03__space.jpg" alt="">
+        <img id="places_04" class="places_item" src="./img/04__space.jpg" alt="">
+        <img id="places_05" class="places_item" src="./img/05__space.jpg" alt="">
+        <img id="places_06" class="places_item" src="./img/06__space.jpg" alt="">
+        <img id="places_07" class="places_item" src="./img/07__space.jpg" alt="">
+        <img id="places_08" class="places_item" src="./img/08__space.jpg" alt="">
+        <img id="places_09" class="places_item" src="./img/09__space.jpg" alt="">
+        <img id="places_10" class="places_item" src="./img/10__space.jpg" alt="">
+        <img id="places_11" class="places_item" src="./img/11__space.jpg" alt="">
+        <img id="places_12" class="places_item" src="./img/12__space.jpg" alt="">
+        <img id="places_13" class="places_item" src="./img/13__space.jpg" alt="">
+        <img id="places_14" class="places_item" src="./img/14__space.jpg" alt="">
+        <img id="places_15" class="places_item" src="./img/15__space.jpg" alt="">
+    </div>
+</div>
 <div class="places">
-    <h1>Places</h1>
-    <div class="content">
-        <p>>This is some text inside of a div block.</p>
+    <div class="places_text">
+        <h1>Places</h1>
+        <div class="content">
+            <p>This is the home for the King brand, here we produce clothes, relax, arrange shows, have fun, in general, we do everything to be happy.</p>
+        </div>
     </div>
 </div>
 <div class="book">
