--- a/index.html
+++ b/index.html
@@ -264,46 +264,46 @@
     </div>
     <div class="events_content">
         <div id="event_countenir_01">
-            <img id="event_item_01" src="./img/Rectangle 526.jpg" alt="">
+            <img id="event_item_01" src="./img/event_01.jpg" alt="">
         </div>
         <div id="event_countenir_02">
-            <img id="event_item_02" src="./img/Rectangle 527.jpg" alt="">
+            <img id="event_item_02" src="./img/event_02.jpg" alt="">
         </div>
         <div id="event_countenir_03">
-            <img id="event_item_03" src="./img/Rectangle 528.jpg" alt="">
+            <img id="event_item_03" src="./img/event_03.jpg" alt="">
         </div>
         <div id="event_countenir_04">
-            <img id="event_item_04" src="./img/Rectangle 529.jpg" alt="">
+            <img id="event_item_04" src="./img/event_04.jpg" alt="">
         </div>
         <div id="event_countenir_05">
-            <img id="event_item_05" src="./img/Rectangle 530.jpg" alt="">
+            <img id="event_item_05" src="./img/event_05.jpg" alt="">
         </div>
         <div id="event_countenir_06">
-            <img id="event_item_06" src="./img/Rectangle 531.jpg" alt="">
+            <img id="event_item_06" src="./img/event_06.jpg" alt="">
         </div>
         <div id="event_countenir_07">
-            <img id="event_item_07" src="./img/Rectangle 532.jpg" alt="">
+            <img id="event_item_07" src="./img/event_07.jpg" alt="">
         </div>
         <div id="event_countenir_08">
-            <img id="event_item_08" src="./img/01.jpg" alt="">
+            <img id="event_item_08" src="./img/event_08.png" alt="">
         </div>
         <div id="event_countenir_09">
-            <img id="event_item_09" src="./img/02.jpg" alt="">
+            <img id="event_item_09" src="./img/event_09.png" alt="">
         </div>
         <div id="event_countenir_10">
-            <img id="event_item_10" src="./img/04.jpg" alt="">
+            <img id="event_item_10" src="./img/event_10.png" alt="">
         </div>
         <div id="event_countenir_11">
-            <img id="event_item_11" src="./img/05.jpg" alt="">
+            <img id="event_item_11" src="./img/event_11.png" alt="">
         </div>
         <div id="event_countenir_12">
-            <img id="event_item_12" src="./img/06.jpg" alt="">
+            <img id="event_item_12" src="./img/event_12.png" alt="">
         </div>
         <div id="event_countenir_13">
-            <img id="event_item_13" src="./img/07.jpg" alt="">
+            <img id="event_item_13" src="./img/event_13.png" alt="">
         </div>
         <div id="event_countenir_14">
-            <img id="event_item_14" src="./img/08.jpg" alt="">
+            <img id="event_item_14" src="./img/event_14.png" alt="">
         </div>
 
     </div>
@@ -348,6 +348,13 @@
             <a target=”_blank class="button" href="https://vimeo.com/950039301?share=copy">
                 <p style="width: 100%;" class="cupture">Full</p>
             </a>
+            <div style="height: auto;" class="nav">
+                <div class="tab_selection">
+                    <div id="id1" style="height: 100%;" class="item"><p class="cupture">Top</p></div>
+                    <div id="id2" class="item"><p class="cupture">Middle</p></div>
+                    <div id="id3" class="item"><p class="cupture">Bottom</p></div>
+                </div>      
+            </div>  
         </div>
     </div>  
 </div>  
