--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>04</title>
+    <title>Kings archive</title>
+    <meta property="og:title" content="King Archive Site">
+    <meta property="og:description" content="Last take in web games, Andrey Kotov, 2024, HSE DESIGN SCHOOL">
+    <meta property="og:image" content="https://d2w9rnfcy7mm78.cloudfront.net/29107828/original_267bf85570fa3c5bbfdc7c6133ccd3c8.png?1719579372?bc=0">    
     <link rel="stylesheet" href="./srtylesheets/styles.css">
+    <link rel="icon" type="image/png" href="./img/favicon.ico" />
     <script type="importmap">
         {
             "imports": {
